--- a/ext/popup.html
+++ b/ext/popup.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="style/main.css" type="text/css"/>
     <link rel="stylesheet" href="style/bootstrap.min.css" type="text/css"/>
     <link type="text/css" href="style/jquery.jscrollpane.css" rel="stylesheet" media="all" />
+    <script>
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = 'https://ssl.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
 </head>
 <body id="index" class="home">
 <div id="main">
@@ -13,17 +20,17 @@
     <header>
     <p id="title">AM Web WHOIS by <a target="_blank" href="http://www.armcoder.am">ArmCoder</a></p>
     <form id="whoForm">
-        <input placeholder="Type the .AM domain name" id="input" type="text">
+        <input tabindex="0" placeholder="Type the .AM domain name" id="input" type="text">
         <a href="javascript:void(0)" id="get" class="btn btn-info btn-lg">Who Is?</a>
     </form>
 
     <ul class="nav nav-tabs" id="myTab">
         <li class="active"><a href="#whois">WhoIs</a></li>
-        <!---<li><a href="#topDomains">Top Armenian Domains</a></li>--->
+        <li><a href="#topDomains"><img src="images/star.png" height="16" width="16" />Top Domains</a></li>
     </ul>
 
     <div id="alert" class="alert alert-danger">
-        Data not received or domain is FREE
+        Data not received or domain is not registered
     </div>
     </header>
 
@@ -34,21 +41,18 @@
             <div class="panel-group" id="accordionOne">
             </div>
             <p id="refer">
-                <!--<a target="_blank" href="javascript:window.print()">Print</a> <br />-->
                 More info at. <a target="_blank" href="https://www.amnic.net">amnic.net</a>
             </p>
         </div>
-        <!--
         <div class="tab-pane" id="topDomains">
             <div class="panel-group" id="accordionTwo">
             </div>
         </div>
-        -->
     </div>
     </div>
 
 
-
+    <script src="script/topDomains.js"></script>
     <script src="script/jquery.min.js"></script>
     <script src="script/main.js"></script>
     <script src="script/bootstrap.min.js"></script>
