--- a/ext/whois.html
+++ b/ext/whois.html
@@ -13,12 +13,12 @@
     <p id="title">AM Web WHOIS by <a target="_blank" href="http://www.armcoder.am">ArmCoder</a></p>
     <form id="whoForm">
         <input tabindex="-1" placeholder="Type the .AM domain name" id="input" type="text">
-        <a href="javascript:void(0)" id="get" class="btn btn-info btn-lg">GET</a>
+        <a href="javascript:void(0)" id="get" class="btn btn-info btn-lg">Who Is?</a>
     </form>
 
     <ul class="nav nav-tabs" id="myTab">
         <li class="active"><a id="whoClick" href="#whois">WhoIs</a></li>
-        <li><a href="#topDomains"><img class="star" src="images/star.png" height="16" width="16" />Top Domains</a></li>
+        <li><a href="#topDomains"><img src="images/star.png" height="16" width="16" />Top Domains</a></li>
     </ul>
 
     <div id="alert" class="alert alert-danger">
@@ -42,7 +42,6 @@
         </div>
     </div>
     </div>
-
     <script src="script/topDomains.js"></script>
     <script src="script/jquery.min.js"></script>
     <script src="script/main.js"></script>
