--- a/ext/whois.html
+++ b/ext/whois.html
@@ -17,8 +17,8 @@
     </form>
 
     <ul class="nav nav-tabs" id="myTab">
-        <li class="active"><a id="whoClick" href="#whois">WhoIs</a></li>
-        <li><a href="#topDomains"><img src="images/star.png" height="16" width="16" />Top Domains</a></li>
+        <li class="active"><a id="whoClick" href="#whois">WHOIS</a></li>
+        <li><a href="#topDomains"><img id="star" src="images/star.png" height="16" width="16" />TOP DOMAINS</a></li>
     </ul>
 
     <div id="alert" class="alert alert-danger">
