--- a/ext/whois.html
+++ b/ext/whois.html
@@ -13,7 +13,7 @@
     <p id="title">AM Web WHOIS by <a target="_blank" href="http://www.armcoder.am">ArmCoder</a></p>
     <form id="whoForm">
         <input tabindex="-1" placeholder="Type the .AM domain name" id="input" type="text">
-        <a href="javascript:void(0)" id="get" class="btn btn-info btn-lg">Who Is?</a>
+        <a href="javascript:void(0)" id="get" class="btn btn-info btn-lg">WHOIS</a>
     </form>
 
     <ul class="nav nav-tabs" id="myTab">
@@ -33,7 +33,7 @@
             <div class="panel-group" id="accordionOne">
             </div>
             <p id="refer">
-                More info at. <a target="_blank" href="https://www.amnic.net">amnic.net</a>
+                from <a target="_blank" href="https://www.amnic.net">amnic</a>
             </p>
         </div>
         <div class="tab-pane" id="topDomains">
