--- a/ext/whois.html
+++ b/ext/whois.html
@@ -33,7 +33,7 @@
             <div class="panel-group" id="accordionOne">
             </div>
             <p id="refer">
-                from <a target="_blank" href="https://www.amnic.net">AMNic.net</a>
+                from <a target="_blank" href="https://www.amnic.net">amnic.net</a>
             </p>
         </div>
         <div class="tab-pane" id="topDomains">
